Fixed search height on IE

--- a/src/app/users/users-list/usersList.component.scss
+++ b/src/app/users/users-list/usersList.component.scss
@@ -45,6 +45,7 @@ content-component {
       right: 0;
       top: 0;
       width: calc(100% - 40px);
+      height: 38px;
       margin: 0;
       padding: 0 5px 0 0;
       line-height: 38px;
